http-echo/deployment/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-echo
  labels:
    app: http-echo
spec:
  selector:
    app: http-echo
  type: ClusterIP
  ports:
    - name: http-port
      port: 8080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: http-echo-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: http-echo
        version: v1
    spec:
      containers:
        - name: http-echo
          image: rekzi/http-echo:latest
          args: [ "-version", "v1" ]
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: http-echo-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: http-echo
        version: v2
    spec:
      containers:
        - name: http-echo
          image: rekzi/http-echo:latest
          args: [ "-version", "v2" ]
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
